syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

// 商品接口
service Goods {
    // 获取商品列表
    rpc GoodsList (GoodsFilterRequest) returns (GoodsListResponse); // 商品列表请求参数: GoodsFilterRequest, 返回值: GoodsListResponse
    // 批量获取商品信息
    rpc BatchGetGoods (BatchGoodsIdInfo) returns (GoodsListResponse); // 批量获取商品信息请求参数: BatchGoodsIdInfo, 返回值: GoodsListResponse
    // 创建商品
    rpc CreateGoods (CreateGoodsInfo) returns (GoodsInfoResponse); // 创建商品请求参数: CreateGoodsInfo, 返回值: GoodsInfoResponse
    // 删除商品
    rpc DeleteGoods (DeleteGoodsInfo) returns (google.protobuf.Empty); // 删除商品请求参数: DeleteGoodsInfo, 返回值: Empty
    // 更新商品信息
    rpc UpdateGoods (CreateGoodsInfo) returns (google.protobuf.Empty); // 更新商品信息请求参数: CreateGoodsInfo, 返回值: Empty
    // 获取商品详情
    rpc GetGoodsDetail (GoodInfoRequest) returns (GoodsInfoResponse); // 获取商品详情请求参数: GoodInfoRequest, 返回值: GoodsInfoResponse

    // 商品分类
    // 获取所有分类列表
    rpc GetAllCategorysList (google.protobuf.Empty) returns (CategoryListResponse); // 获取所有分类列表请求参数: Empty, 返回值: CategoryListResponse
    // 获取子分类列表
    rpc GetSubCategory (CategoryListRequest) returns (SubCategoryListResponse); // 获取子分类列表请求参数: CategoryListRequest, 返回值: SubCategoryListResponse
    // 创建分类信息
    rpc CreateCategory (CategoryInfoRequest) returns (CategoryInfoResponse); // 创建分类信息请求参数: CategoryInfoRequest, 返回值: CategoryInfoResponse
    // 删除分类
    rpc DeleteCategory (DeleteCategoryRequest) returns (google.protobuf.Empty); // 删除分类请求参数: DeleteCategoryRequest, 返回值: Empty
    // 更新分类信息
    rpc UpdateCategory (CategoryInfoRequest) returns (google.protobuf.Empty); // 更新分类信息请求参数: CategoryInfoRequest, 返回值: Empty

    // 品牌和轮播图
    // 获取品牌列表
    rpc BrandList (BrandFilterRequest) returns (BrandListResponse); // 获取品牌列表请求参数: BrandFilterRequest, 返回值: BrandListResponse
    // 创建品牌信息
    rpc CreateBrand (BrandRequest) returns (BrandInfoResponse); // 创建品牌信息请求参数: BrandRequest, 返回值: BrandInfoResponse
    // 删除品牌
    rpc DeleteBrand (BrandRequest) returns (google.protobuf.Empty); // 删除品牌请求参数: BrandRequest, 返回值: Empty
    // 更新品牌信息
    rpc UpdateBrand (BrandRequest) returns (google.protobuf.Empty); // 更新品牌信息请求参数: BrandRequest, 返回值: Empty

    // 轮播图
    // 获取轮播图列表信息
    rpc BannerList (google.protobuf.Empty) returns (BannerListResponse); // 获取轮播图列表信息请求参数: Empty, 返回值: BannerListResponse
    // 添加轮播图
    rpc CreateBanner (BannerRequest) returns (BannerResponse); // 添加轮播图请求参数: BannerRequest, 返回值: BannerResponse
    // 删除轮播图
    rpc DeleteBanner (BannerRequest) returns (google.protobuf.Empty); // 删除轮播图请求参数: BannerRequest, 返回值: Empty
    // 更新轮播图
    rpc UpdateBanner (BannerRequest) returns (google.protobuf.Empty); // 更新轮播图请求参数: BannerRequest, 返回值: Empty

    // 品牌分类
    // 获取品牌分类列表信息
    rpc CategoryBrandList (CategoryBrandFilterRequest) returns (CategoryBrandListResponse); // 获取品牌分类列表信息请求参数: CategoryBrandFilterRequest, 返回值: CategoryBrandListResponse
    // 通过分类获取品牌列表
    rpc GetCategoryBrandList (CategoryInfoRequest) returns (BrandListResponse); // 通过分类获取品牌列表请求参数: CategoryInfoRequest, 返回值: BrandListResponse
    // 创建品牌分类
    rpc CreateCategoryBrand (CategoryBrandRequest) returns (CategoryBrandResponse); // 创建品牌分类请求参数: CategoryBrandRequest, 返回值: CategoryBrandResponse
    // 删除品牌分类
    rpc DeleteCategoryBrand (CategoryBrandRequest) returns (google.protobuf.Empty); // 删除品牌分类请求参数: CategoryBrandRequest, 返回值: Empty
    // 更新品牌
}

// 类别列表请求
message CategoryListRequest {
    int32 id = 1; // 类别ID
    int32 level = 2; // 类别级别
}

// 类别信息请求
message CategoryInfoRequest {
    int32 id = 1; // 类别ID
    string name = 2; // 类别名称
    int32 parentCategory = 3; // 父类别ID
    int32 level = 4; // 类别级别
    bool isTab = 5; // 是否是选项卡
}

// 删除类别请求
message DeleteCategoryRequest {
    int32 id = 1; // 类别ID
}

// 查询类别请求
message QueryCategoryRequest {
    int32 id = 1; // 类别ID
    string name = 2; // 类别名称
}

// 类别信息响应
message CategoryInfoResponse {
    int32 id = 1; // 类别ID
    string name = 2; // 类别名称
    int32 parentCategory = 3; // 父类别ID
    int32 level = 4; // 类别级别
    bool isTab = 5; // 是否是选项卡
}

// 类别列表响应
message CategoryListResponse {
    int32 total = 1; // 总数
    repeated CategoryInfoResponse data = 2; // 类别信息列表
    string jsonData = 3; // JSON数据
}

// 子类别列表响应
message SubCategoryListResponse {
    int32 total = 1; // 总数
    CategoryInfoResponse info = 2; // 类别信息
    repeated CategoryInfoResponse subCategorys = 3; // 子类别列表
}

// 类别品牌过滤请求
message CategoryBrandFilterRequest  {
    int32 pages = 1; // 页数
    int32 pagePerNums = 2; // 每页数量
}

// 过滤请求
message FilterRequest  {
    int32 pages = 1; // 页数
    int32 pagePerNums = 2; // 每页数量
}

// 类别品牌请求
message CategoryBrandRequest{
    int32 id = 1; // ID
    int32 categoryId = 2; // 类别ID
    int32 brandId = 3; // 品牌ID
}

// 类别品牌响应
message CategoryBrandResponse{
    int32 id = 1; // ID
    BrandInfoResponse brand = 2; // 品牌信息
    CategoryInfoResponse category = 3; // 类别信息
}



// 横幅请求
message BannerRequest {
    int32 id = 1; // ID
    int32 index = 2; // 索引
    string image = 3; // 图片
    string url = 4; // 链接URL
}

// 横幅响应
message BannerResponse {
    int32 id = 1; // ID
    int32 index = 2; // 索引
    string image = 3; // 图片
    string url = 4; // 链接URL
}

// 品牌过滤请求
message BrandFilterRequest {
    int32 pages = 1; // 页数
    int32 pagePerNums = 2; // 每页数量
}

// 品牌请求
message BrandRequest {
    int32 id = 1; // ID
    string name = 2; // 名称
    string logo = 3; // 标志
}

// 品牌信息响应
message BrandInfoResponse {
    int32 id = 1; // ID
    string name = 2; // 名称
    string logo = 3; // 标志
}

// 品牌列表响应
message BrandListResponse {
    int32 total = 1; // 总数
    repeated BrandInfoResponse data = 2; // 品牌信息列表
}

// 横幅列表响应
message BannerListResponse {
    int32 total = 1; // 总数
    repeated BannerResponse data = 2; // 横幅信息列表
}
///分类品牌
message CategoryBrandListResponse {
    int32 total = 1; //总数
    repeated CategoryBrandResponse data = 2; //分类品牌信息列表
}

// 创建新类别请求
message CreateCategoryRequest {
    string name = 1; // 类别名称
    int32 parentCategory = 2; // 父类别ID
    int32 level = 3; // 类别级别
    bool isTab = 4; // 是否是选项卡
}

// 更新类别请求
message UpdateCategoryRequest {
    int32 id = 1; // 类别ID
    string name = 2; // 类别名称
    int32 parentCategory = 3; // 父类别ID
    int32 level = 4; // 类别级别
    bool isTab = 5; // 是否是选项卡
}

// 创建品牌请求
message CreateBrandRequest {
    string name = 1; // 品牌名称
    string logo = 2; // 品牌标志
}

// 更新品牌请求
message UpdateBrandRequest {
    int32 id = 1; // 品牌ID
    string name = 2; // 品牌名称
    string logo = 3; // 品牌标志
}

// 删除品牌请求
message DeleteBrandRequest {
    int32 id = 1; // 品牌ID
}



// 批量商品ID信息
message BatchGoodsIdInfo {
    repeated int32 id = 1; // 商品ID列表
}

// 删除商品信息
message DeleteGoodsInfo {
    int32 id = 1; // 商品ID
}

// 类别简要信息响应
message CategoryBriefInfoResponse {
    int32 id = 1; // 类别ID
    string name = 2; // 类别名称
}

// 类别筛选请求
message CategoryFilterRequest {
    int32 id = 1; // 类别ID
    bool isTab = 2; // 是否是选项卡
}

// 商品信息请求
message GoodInfoRequest {
    int32 id = 1; // 商品ID
}

// 创建商品信息请求
message CreateGoodsInfo {
    int32 id = 1; // 商品ID
    string name = 2; // 商品名称
    string goodsSn = 3; // 商品编号
    int32 stocks = 7; // 库存
    float marketPrice = 8; // 市场价格
    float shopPrice = 9; // 商店价格
    string goodsBrief = 10; // 商品简介
    string goodsDesc = 11; // 商品描述
    bool shipFree = 12; // 是否包邮
    repeated string images = 13; // 商品图片列表
    repeated string descImages = 14; // 商品详细图片列表
    string goodsFrontImage = 15; // 商品封面图片
    bool isNew = 16; // 是否新品
    bool isHot = 17; // 是否热销
    bool onSale = 18; // 是否在售
    int32 categoryId = 19; // 类别ID
    int32 brandId = 20; // 品牌ID
}

// 商品减少请求
message GoodsReduceRequest {
    int32 GoodsId = 1; // 商品ID
    int32 nums = 2; // 数量
}

// 批量类别信息请求
message BatchCategoryInfoRequest {
    repeated int32 id = 1; // 类别ID列表
    int32 goodsNums = 2; // 商品数量
    int32 brandNums = 3; // 品牌数量
}

// 商品筛选请求
message GoodsFilterRequest  {
    int32 priceMin = 1; // 最低价格
    int32 priceMax = 2; // 最高价格
    bool isHot = 3; // 是否热销
    bool isNew = 4; // 是否新品
    bool isTab = 5; // 是否是选项卡
    int32 topCategory = 6; // 最高级别类别
    int32 pages = 7; // 页数
    int32 pagePerNums = 8; // 每页显示数量
    string keyWords = 9; // 关键词
    int32 brand = 10; // 品牌
}

// 商品信息响应
message GoodsInfoResponse {
    int32 id = 1; // 商品ID
    int32 categoryId = 2; // 类别ID
    string name = 3; // 商品名称
    string goodsSn = 4; // 商品编号
    int32 clickNum = 5; // 点击次数
    int32 soldNum = 6; // 销售数量
    int32 favNum = 7; // 收藏数量
    float marketPrice = 9; // 市场价格
    float shopPrice = 10; // 商店价格
    string goodsBrief = 11; // 商品简介
    string goodsDesc = 12; // 商品描述
    bool shipFree = 13; // 是否包邮
    repeated string images = 14; // 商品图片列表
    repeated string descImages = 15; // 商品详细图片列表
    string goodsFrontImage = 16; // 商品封面图片
    bool isNew = 17; // 是否新品
    bool isHot = 18; // 是否热销
    bool onSale = 19; // 是否在售
    int64 addTime = 20; // 添加时间
    CategoryBriefInfoResponse category = 21; // 类别信息
    BrandInfoResponse brand = 22; // 品牌信息
}

// 商品列表响应
message GoodsListResponse {
    int32 total = 1; // 总数
    repeated GoodsInfoResponse data = 2;//商品数据
}